<?xml version="1.0" encoding="utf-8"?>


<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- This design consists of two
 textsViews below each other so it would be
 better to use Linear Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_2"
            android:textAlignment="center"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/instruction_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next" />
    </LinearLayout>
</layout>

