<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!--In this design, there will be components below each other
    and components next to each other,
    and this is a complex design,
    so the most appropriate layout is ConstraintLayout
     and i used constraint layout to not use nested
     linear layout-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_name_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textAutoComplete"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoe_size_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="3"
            android:textAlignment="center"
            android:inputType="number"

            android:text="@={shoe.size+``}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit_text"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        <!--                                                                         -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textAutoComplete"

            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_size_edit_text"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit_text"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textAutoComplete"

            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="@+id/company_edit_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/company_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/company_edit_text"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/details_done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            app:layout_constraintBaseline_toBaselineOf="@+id/details_cancel_btn"
            app:layout_constraintEnd_toStartOf="@+id/details_cancel_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/details_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_done_btn"
            app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>